# esp-opencv-component

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.sh  idf_component.yml
cmake/: toolchain-esp32.cmake
examples/features2d/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/features2d/main/: CMakeLists.txt  cv_opencv_features2d.cpp  main.c  test_opencv.cpp
examples/motion_detection/: CMakeLists.txt  README.md
examples/motion_detection/main/: CMakeLists.txt  cv_motion_detection.cpp  main.c
examples/object_tracking/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
examples/object_tracking/main/: CMakeLists.txt  cv_object_tracking.cpp  main.c
examples/people_detection/: CMakeLists.txt  README.md
examples/people_detection/main/: CMakeLists.txt  cv_people_detection.cpp  main.c
examples/text_area_detection/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/text_area_detection/main/: CMakeLists.txt  cv_text_detection.cpp  main.c
opencv_patch/: opencv.patch
